# simple_dotenv

./: .gitignore  README.md  dune-project  simple_dotenv.opam
lib/: dotenv.ml  dune
test/: dotenv_test.ml  dune
